# VirusTotalScanner

./: .gitignore  CMakeLists.txt  README.md
include/: Scanner.hpp  Utils.hpp
src/: Scanner.cpp  Utils.cpp  main.cpp
